syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.shashi.models";

message BalanceCheckRequest{
  int32 account_number = 1;
}

message Balance{
  int32 amount = 1;
}

message WithdrawRequest{
  int32 account_number = 1;
  int32 amount = 2;
}

message Money{
  int32 value = 1;
}

message DepositeRequest{
  int32 account_number = 1;
  int32 amount = 2;
}

service BankService{
  //Unary call
  rpc getBalance(BalanceCheckRequest) returns (Balance);
  // server-side streaming
  rpc withdraw(WithdrawRequest) returns (stream Money);
  // Client side streaming example
  rpc cashDeposite(stream DepositeRequest) returns (Balance);
}